--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,10 @@ platform = atmelsam
 board = adafruit_feather_m0
 framework = arduino
 lib_deps = adafruit/SD@0.0.0-alpha+sha.041f788250
+
+
+[env:m0_express]
+platform = atmelsam
+board = adafruit_feather_m0_express
+framework = arduino
+lib_deps = adafruit/SD@0.0.0-alpha+sha.041f788250
