Switch to Serial1 to use hardware serial pins, add environment for monitoring M0 over TTL.

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,13 @@ board = adafruit_feather_m0
 framework = arduino
 lib_deps = adafruit/SD@0.0.0-alpha+sha.041f788250
 
+[env:m0_ttl]
+platform = atmelsam
+board = adafruit_feather_m0
+framework = arduino
+lib_deps = adafruit/SD@0.0.0-alpha+sha.041f788250
+monitor_port = /dev/ttyUSB0
+monitor_speed = 115200
 
 [env:m0_express]
 platform = atmelsam
